src/test/ui/parser/bad-pointer-type.stderr
error: expected `mut` or `const` keyword in raw pointer type
  --> $DIR/bad-pointer-type.rs:1:11
   |
LL | fn foo(_: *()) {
   |           ^
   |
help: add `mut` or `const` here
   |
LL | fn foo(_: *const ()) {
   |            +++++
LL | fn foo(_: *mut ()) {
   |            +++

error: aborting due to previous error

